--- a/the-quirky-web-dev/app/views/layouts/_navbar.html.erb
+++ b/the-quirky-web-dev/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;"">
-  <span class="navbar-brand mb-0 h1">The Quirky Web Dev</span>
+<nav class="nav-bar">
+  <span class="site-title">The Quirky Web Dev</span>
 </nav>
