--- a/the-quirky-web-dev/app/assets/stylesheets/blogs/_index.scss
+++ b/the-quirky-web-dev/app/assets/stylesheets/blogs/_index.scss
@@ -31,8 +31,9 @@ body {
       text-align: left;
       padding: 1em 0 0 1em;
 
-      .blog-link {
+      .blog-title-link {
         color: black;
+        text-decoration: none;
       }
     }
 
