--- a/the-quirky-web-dev/app/assets/stylesheets/navbar/_nav_bar.scss
+++ b/the-quirky-web-dev/app/assets/stylesheets/navbar/_nav_bar.scss
@@ -8,4 +8,11 @@
 
 .site-title {
   @extend .h4;
+  color: black;
+  text-decoration: none;
+}
+
+a.site-title {
+  color: black;
+  text-decoration: none;
 }
