--- a/the-quirky-web-dev/app/views/blogs/index.html.erb
+++ b/the-quirky-web-dev/app/views/blogs/index.html.erb
@@ -1,10 +1,10 @@
 <div class="blog-container">
   <div class="row">
 		<div class="col-md-8">
-			<% @blogs.each do |blog| %>
+			<% blogs.each do |blog| %>
 				<div class="blog-entries">
 					<div class="blog-title">
-						<%= link_to blog.title, blogs_path(blog), class: "blog-link" %>
+						<%= link_to blog.title, blog_path(blog), class: "blog-title-link" %>
 
 						<div class=blog-date>
 							<%= blog.created_at.strftime("%B %d, %Y") %>
@@ -18,11 +18,12 @@
 			<% end %>
 		</div>
 
-	<div class="archives">
-	  <span class="archives-title">ARCHIVES</span><br>
-			<% @blogs.each do |blog| %>
-				<%= link_to blog.created_at.strftime("%B %d, %Y"), blogs_path(blog), class: "blog-link" %><br>
-			<% end %>
-	</div>
+    <div class="archives">
+      <span class="archives-title">ARCHIVES</span><br>
+
+      <% blogs.each do |blog| %>
+        <%= link_to blog.created_at.strftime("%B %d, %Y"), blog_path(blog), class: "blog-link" %><br>
+      <% end %>
+    </div>
   </div>
 </div>
