--- a/the-quirky-web-dev/app/views/layouts/_navbar.html.erb
+++ b/the-quirky-web-dev/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,3 @@
 <nav class="nav-bar">
-  <span class="site-title">The Quirky Web Dev</span>
+  <%= link_to 'The Quirky Web Dev', root_path, class: "site-title" %>
 </nav>
