--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,7 +6,7 @@
 					<div class="blog-title">
 						<%= link_to blog.title, blog_path(blog), class: "blog-title-link" %>
 
-						<div class=blog-date>
+						<div class="blog-date">
 							<%= blog.created_at.strftime("%B %d, %Y") %>
 						</div>
 					</div>
