--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,5 @@
 <div class="form-container">
-  <h5 class="new-blog-title"> <%= "New Blog Post" %> </h5>
+  <h5> <%= "New Blog Post" %> </h5>
 
   <%= render "form", blog: @blog %>
 
