--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: blog) do |form| %>
+<%= form_with(model: @blog) do |form| %>
   <div>
     <%= form.label :title %><br>
     <%= form.text_area :title, class: "title-field" %>
@@ -8,6 +8,9 @@
     <%= form.label :body %>
     <%= form.rich_text_area :body, class: "body-field" %>
   </div>
+
+  <%= form.hidden_field :user_id, value: current_user.id %>
+
   <br>
     <%= form.submit :Submit, class: "submit-button" %>
 <% end %>
