--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="blog-container">
   <div class="row">
 		<div class="col-md-8">
-			<% blogs.each do |blog| %>
+			<% @blogs.each do |blog| %>
 				<div class="blog-entries">
 					<div class="blog-title">
 						<%= link_to blog.title, blog_path(blog), class: "blog-title-link" %>
@@ -21,7 +21,7 @@
     <div class="archives">
       <span class="archives-title">ARCHIVES</span><br>
 
-      <% blogs.each do |blog| %>
+      <% @blogs.each do |blog| %>
         <%= link_to blog.created_at.strftime("%B %d, %Y"), blog_path(blog), class: "blog-link" %><br>
       <% end %>
     </div>
